<resources>
    <string name="app_name">Examen2Eva</string>
    <string name="t_tulo">Título:</string>
    <string name="duraci_n">Duración:</string>
    <string name="director">Director:</string>
    <string name="lanzamiento">Lanzamiento:</string>
    <string name="continuar">continuar</string>
    <string name="a_adir_nueva_pel_cula">Añadir nueva película.</string>
    <string name="volver">volver</string>
</resources>