<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDisplayActivity">

    <Button
        android:id="@+id/volver2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="361dp"
        android:layout_height="135dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558">

        <LinearLayout
            android:layout_width="164dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_tulo"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/duraci_n"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/director"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lanzamiento"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="197dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textDuracion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textDirector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textLanzamiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="270dp"
        android:layout_height="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145" />

    <TextView
        android:id="@+id/añadir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_adir_nueva_pel_cula"
        android:textColor="#1CA8E6"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.774" />


</androidx.constraintlayout.widget.ConstraintLayout>